--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.webColor{
+  background: var(--bg, linear-gradient(270deg, #D9E4CA 0%, #DBE5CC 32.92%, #C5DBAC 100%));
+}
+.navbar {
+  background: var(--bg, linear-gradient(270deg, #D9E4CA 0%, #DBE5CC 32.92%, #C5DBAC 100%));
+box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.06), 4px 0px 9px 0px rgba(0, 0, 0, 0.06), 17px 0px 17px 0px rgba(0, 0, 0, 0.05), 37px 0px 22px 0px rgba(0, 0, 0, 0.03), 67px 0px 27px 0px rgba(0, 0, 0, 0.01), 104px 0px 29px 0px rgba(0, 0, 0, 0.00);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navFont {
+  color: #000;
+font-family: Lato;
+font-size: 21px;
+font-style: normal;
+font-weight: 600;
+line-height: 29px; /* 138.095% */
+letter-spacing: -0.63px;
 }
+
+.buynow {
+  color: #FFF;
+text-align: center;
+font-family: Proxima Nova;
+font-size: 17.785px;
+font-style: normal;
+font-weight: 700;
+line-height: 21.491px; /* 120.833% */
+}
+ /* <div
+          onClick={() => setNav(!nav)}
+          className="cursor-pointer text-[#FFFFFF]  z-10 sm:hidden"
+        >
+          {nav ? (
+            <>
+              <FaTimes size={30} />
+              
+            </>
+          ) : (
+            <FaBars size={30} />
+          )}
+        </div> */
+
+        {/* <Sidebar /> */}
