--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,8 @@
   background: var(--bg, linear-gradient(270deg, #D9E4CA 0%, #DBE5CC 32.92%, #C5DBAC 100%));
 box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.06), 4px 0px 9px 0px rgba(0, 0, 0, 0.06), 17px 0px 17px 0px rgba(0, 0, 0, 0.05), 37px 0px 22px 0px rgba(0, 0, 0, 0.03), 67px 0px 27px 0px rgba(0, 0, 0, 0.01), 104px 0px 29px 0px rgba(0, 0, 0, 0.00);
 }
+
+.card {
+  border-radius: 54.644px;
+background: linear-gradient(91deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.00) 100%);
+}
