--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,10 @@ box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.06), 4px 0px 9px 0px rgba(0, 0, 0, 0
   border-radius: 54.644px;
 background: linear-gradient(91deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.00) 100%);
 }
+.products {
+  fill: linear-gradient(134deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.09) 100%);
+stroke-width: 3px;
+stroke: #FFF;
+filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.25));
+backdrop-filter: blur(27px);
+}
