--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ backdrop-filter: blur(27px);
 }
 .items {
  background: linear-gradient(134deg, rgba(255, 255, 255, 0.42) 0%, rgba(255, 255, 255, 0.09) 100%);
+stroke-width: 3px;
+stroke: #FFF;
 filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.25));
 backdrop-filter: blur(27px);
 }
